--- a/webroot/css/contrail.theme.layout.css
+++ b/webroot/css/contrail.theme.layout.css
@@ -28,61 +28,64 @@
   height: 40px;
 }
 
-/*.navbar-header {*/
-  /*padding: 5px;*/
-  /*height: 45px;*/
-/*}*/
+/* Sidebar */
 
-/*#user_info, #alert_info {*/
-  /*max-width: 100px;*/
-  /*display: inline-block;*/
-  /*overflow: hidden;*/
-  /*text-overflow: ellipsis;*/
-  /*white-space: nowrap;*/
-  /*vertical-align: top;*/
-  /*line-height: 15px;*/
-  /*position: relative;*/
-  /*padding: 13px 0;*/
-  /*color:#555;*/
-/*}*/
-
-#breadcrumbs.fixed {
-  position: fixed;
-  left: 183px;
-  right: 0;
+#sidebar {
+    width: 182px;
+    height: 100%;
+    margin-left: 0;
+    margin-top: 0;
+    border-right: 1px solid #cccccc;
 }
 
+#sidebar-shortcuts {
+    background-color: #fafafa;
+    border-bottom: 1px solid #dddddd;
+    /* border-top: 1px solid #ddd; */
+    text-align: center;
+    line-height: 37px;
+    max-height: 40px;
+    margin-bottom: 0;
+}
 #sidebar-shortcuts-large .btn:hover {
-  margin-top: 2px;
+    margin-top: 2px;
 }
 #sidebar-shortcuts-large .btn.active {
-  border-bottom: 3px solid #333;
-  margin-top: 2px;
+    border-bottom: 3px solid #333;
+    margin-top: 2px;
 }
 #sidebar-shortcuts-large .btn:focus {
-  outline: none;
+    outline: none;
 }
 
-.scrolled {
-  top: 0 !important;
-  -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,.15);
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,.15);
+#sidebar.menu-min {
+    width: 42px;
+    z-index: 14;
 }
 
-.btn-monitor, .btn-monitor:hover {
-  background-color: #599AC9 !important;
-  border-color: #599AC9;
+#sidebar.menu-min + #main-content #breadcrumbs.fixed {
+    left: 42px;
 }
 
-.btn-configure, .btn-configure:hover {
-  background-color: #e48782 !important;
-  border-color: #e48782;
+#sidebar-collapse {
+    position: absolute;
+    right: -2px;
+    margin: 1px 0;
+    text-align: right;
+    padding: 3px 0;
 }
 
-.btn-setting, .btn-setting:hover {
-  background-color: #7dc48a !important;
-  border-color: #7dc48a;
+#sidebar-collapse > [class*="fa-"] {
+    display: inline-block;
+    cursor: pointer;
+    font-size: 20px;
+    color: #aaaaaa;
+    /* border: 1px solid #bbbbbb; */
+    padding: 0 5px;
+    line-height: 18px;
+    position: relative;
 }
+
 
 .btn {
     display: inline-block;
@@ -99,77 +102,77 @@
     vertical-align: middle;
     margin: 0;
     position: relative;
- }
-
-.btn-query, .btn-query:hover, .btn-query:active, .btn-query:focus  {
-  background-color: #c79dcd !important;
-  border-color: #c79dcd;
 }
 
 .btn-mini {
-  padding: 0 5px;
-  line-height: 22px;
-  border-width: 2px;
-  font-size: 12px;
+    padding: 0 5px;
+    line-height: 22px;
+    border-width: 2px;
+    font-size: 12px;
 }
 
 .btn, .btn-default, .btn:hover, .btn-default:hover {
-  background-color: #898989 !important;
-  border-color: #898989;
+    background-color: #898989 !important;
+    border-color: #898989;
 }
 
 .btn-primary {
-  background-color: #599AC9 !important;
-  border-color: #599AC9 !important;
+    background-color: #599AC9 !important;
+    border-color: #599AC9 !important;
 }
 
 .btn-monitor, .btn-monitor:hover {
-  background-color: #599AC9 !important;
-  border-color: #599AC9;
+    background-color: #599AC9 !important;
+    border-color: #599AC9;
 }
 
 .btn-configure, .btn-configure:hover {
-  background-color: #e48782 !important;
-  border-color: #e48782;
+    background-color: #e48782 !important;
+    border-color: #e48782;
 }
 
 .btn-setting, .btn-setting:hover {
-  background-color: #7dc48a !important;
-  border-color: #7dc48a;
+    background-color: #7dc48a !important;
+    border-color: #7dc48a;
 }
 
-.btn-query, .btn-query:hover {
-  background-color: #c79dcd !important;
-  border-color: #c79dcd;
+.btn-query, .btn-query:hover, .btn-query:active, .btn-query:focus {
+    background-color: #c79dcd !important;
+    border-color: #c79dcd;
 }
 
-#sidebar {
-  width: 182px;
-  position: fixed;
-  bottom: 0px;
-  top: 45px;
-  margin-left: 0;
-  margin-top: 0;
-  border-right: 1px solid #cccccc;
+/* BreadCrumbs */
+
+#breadcrumbs {
+    border-bottom: 1px solid #e5e5e5;
+    background-color: #fff;
+    min-height: 40px;
+    line-height: 39px;
+    padding: 0 12px 0 0;
+    display: block;
+    z-index: 13;
+    width: 100%;
 }
 
-#sidebar-shortcuts {
-   background-color: #fafafa;
-   border-bottom: 1px solid #dddddd;
-   /* border-top: 1px solid #ddd; */
-   text-align: center;
-   line-height: 37px;
-   max-height: 40px;
-   margin-bottom: 0;
- }
+/* Main Content */
 
-#sidebar.menu-min {
-  width: 42px;
-  z-index: 14;
+.main-content {
+    margin-left: 0;
+    min-height: 96%;
+    padding: 0 0 20px;
 }
 
-#sidebar.menu-min + #main-content #breadcrumbs.fixed {
-  left: 42px;
+#page-content {
+    background: #ffffff;
+    margin: 0;
+    padding: 2px 10px 27px;
+}
+
+.scrolled {
+    position: fixed;
+    top: 0 !important;
+  /*-webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,.15);*/
+  /*box-shadow: 0 2px 4px 0 rgba(0,0,0,.15);*/
 }
 
 .ace-nav > li {
@@ -206,16 +209,6 @@
   display: inline-block;
 }
 
-#sidebar-collapse > [class*="fa-"] {
-  display: inline-block;
-  cursor: pointer;
-  font-size: 20px;
-  color: #aaaaaa;
-  /* border: 1px solid #bbbbbb; */
-  padding: 0 5px;
-  line-height: 18px;
-  position: relative;
-}
 
 pre {
   -webkit-border-radius: 0px;
@@ -259,14 +252,6 @@ input[type="text"]:focus {
   line-height: 35px;
 }
 
-#sidebar-collapse {
-  position: absolute;
-  right: -2px;
-  margin: 1px 0;
-  text-align: right;
-  padding: 3px 0;
-}
-
 .nav-list > li {
   display: block;
   padding: 0;
@@ -282,41 +267,8 @@ input[type="text"]:focus {
   color: #3182bd;
 }
 
-#main-content {
-  margin-right: 7px;
-}
-
 .sidebar + .main-content {
   margin-left: 182px;
-}
-
-.main-content {
-  margin-left: 0;
-  min-height: 96%;
-  padding: 0;
-}
-
-#breadcrumbs.fixed {
-  position: fixed;
-  left: 182px;
-  right: 0;
-}
-
-#breadcrumbs {
-  position: relative;
-  border-bottom: 1px solid #e5e5e5;
-  background-color: #fff;
-  min-height: 40px;
-  line-height: 39px;
-  padding: 0 12px 0 0;
-  display: block;
-  z-index: 13;
-}
-
-#page-content {
-  background: #ffffff;
-  margin: 0;
-  padding: 43px 10px 27px;
 }
 
 .margin-0-0-5 {
